--- a/trunk/Makefile.in
+++ b/trunk/Makefile.in
@@ -289,7 +289,12 @@ SUBDIRS = . appcommon ncoords clickpopper_threads  xn_instruction libcairoXndraw
 #todo libgimpslave to override tool 'brush movement' data in gimp, since this is not exposed for a plugin - a feature request might be a better idea!
 DIST_SUBDIRS = $(SUBDIRS)
 EXTRA_DIST = reconf.sh xndraw-1.pc.in
+#breaks on windows?
+#format date from most to least significant for sorting
+XN_DATE = `date  +%Y%m%d`
+DATEDIST_ARCHIVES = $(PACKAGE)-$(XN_DATE).tar.gz
 AM_CPPFLAGS = -I$(top_builddir) -I$(top_srcdir) -I$(top_srcdir)/include  -I$(top_srcdir)/xndraw  -I$(top_srcdir)/ncoords -pipe  -Wall -ggdb -g -O0
+#mv $(DIST_ARCHIVES) $(PACKAGE)-`date  +%d%m%Y`.tar.gz
 LOCALCLEANFILES = defines.h xndraw-1.pc
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
@@ -827,6 +832,10 @@ doc-clean-recursive:
 	(cd doc && $(MAKE) $(AM_MAKEFLAGS) doc-clean)
 
 doc-clean: doc-clean-recursive
+
+date-dist: dist
+
+	mv $(DIST_ARCHIVES) $(DATEDIST_ARCHIVES)
 
 edit-clean-local:
 	for f in $(LOCALCLEANFILES); do if test -f $$f; then rm -f $$f; fi; done
